# breaker

./: .gitignore  .graphifyignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  deny.toml  rustc-ice-2026-04-09T19_15_47-2900.txt  rustc-ice-2026-04-09T19_24_47-3463.txt  rustc-ice-2026-04-09T19_27_37-8254.txt  rustc-ice-2026-04-09T19_31_14-9725.txt  rustc-ice-2026-04-09T19_36_26-11146.txt  rustc-ice-2026-04-09T19_55_31-17540.txt  rustc-ice-2026-04-09T19_57_29-20263.txt  rustfmt.toml
breaker-game/: Cargo.toml
breaker-game/assets/amps/: bolt_size.amp.ron  chain_hit.amp.ron  damage_boost.amp.ron  piercing.amp.ron
breaker-game/assets/archetypes/: aegis.archetype.ron  chrono.archetype.ron  prism.archetype.ron
breaker-game/assets/augments/: wide_breaker.augment.ron
breaker-game/assets/bolts/: default.bolt.ron
breaker-game/assets/breakers/: aegis.bdef.ron  aegis.breaker.ron  chrono.bdef.ron  chrono.breaker.ron  prism.bdef.ron  prism.breaker.ron
breaker-game/assets/cells/: guarded.cell.ron  guardian.cell.ron  lock.cell.ron  regen.cell.ron  standard.cell.ron  tough.cell.ron  volatile.cell.ron
breaker-game/assets/chips/: aftershock.chip.ron  amp.chip.ron  augment.chip.ron  bolt_size.chip.ron  bolt_speed.chip.ron  breaker_speed.chip.ron  bump_force.chip.ron  cascade.chip.ron  chain_hit.chip.ron  chain_reaction.chip.ron  damage_boost.chip.ron  deadline.chip.ron  feedback_loop.chip.ron  flux.chip.ron  gauntlet.chip.ron  glass_cannon.chip.ron  impact.chip.ron  last_stand.chip.ron  magnetism.chip.ron  overclock.chip.ron  piercing.chip.ron  reflex.chip.ron  ricochet_protocol.chip.ron  singularity.chip.ron  surge.chip.ron  tether.chip.ron  tilt_control.chip.ron  whiplash.chip.ron  wide_breaker.chip.ron
breaker-game/assets/config/: defaults.bolt.ron  defaults.breaker.ron  defaults.chipselect.ron  defaults.difficulty.ron  defaults.highlights.ron  defaults.mainmenu.ron  defaults.playfield.ron  defaults.toughness.ron
breaker-game/assets/evolutions/: dead_mans_hand.evolution.ron  phantom_breaker.evolution.ron  supernova.evolution.ron  voltchain.evolution.ron
breaker-game/assets/examples/: bolt.example.ron  breaker.example.ron  cell.example.ron  chip.example.ron  evolution.example.ron  node.example.ron  wall.example.ron
breaker-game/assets/nodes/: bastion.node.ron  boss_arena.node.ron  corridor.node.ron  dense.node.ron  fortress.node.ron  gauntlet.node.ron  scatter.node.ron
breaker-game/assets/overclocks/: cascade.overclock.ron  desperation.overclock.ron  last_stand.overclock.ron  reflex.overclock.ron  surge.overclock.ron
breaker-game/assets/walls/: wall.wall.ron
breaker-game/src/: app.rs  game.rs  lib.rs  main.rs
breaker-game/src/audio/: mod.rs  plugin.rs
breaker-game/src/behaviors/: active.rs  armed.rs  bridges.rs  definition.rs  evaluate.rs  events.rs  init.rs  mod.rs  plugin.rs  registry.rs  sets.rs
breaker-game/src/bolt/: builder.rs  components.rs  definition.rs  filters.rs  messages.rs  mod.rs  plugin.rs  queries.rs  registry.rs  resources.rs  sets.rs  test_utils.rs
breaker-game/src/breaker/: definition.rs  filters.rs  messages.rs  mod.rs  plugin.rs  queries.rs  registry.rs  resources.rs  sets.rs  test_utils.rs
breaker-game/src/cells/: components.rs  definition.rs  filters.rs  messages.rs  mod.rs  plugin.rs  queries.rs  resources.rs  test_utils.rs
breaker-game/src/chips/: components.rs  definition.rs  inventory.rs  messages.rs  mod.rs  offering.rs  plugin.rs  queries.rs  resources.rs
breaker-game/src/debug/: mod.rs  plugin.rs  resources.rs
breaker-game/src/effect/: active.rs  armed.rs  bridges.rs  commands.rs  definition.rs  evaluate.rs  events.rs  helpers.rs  init.rs  mod.rs  plugin.rs  registry.rs  sets.rs  typed_events.rs
breaker-game/src/effect_v3/: mod.rs  plugin.rs  sets.rs
breaker-game/src/fx/: components.rs  mod.rs  plugin.rs  transition.rs
breaker-game/src/input/: mod.rs  plugin.rs  resources.rs
breaker-game/src/interpolate/: components.rs  mod.rs  plugin.rs
breaker-game/src/physics/: filters.rs  messages.rs  mod.rs  plugin.rs  queries.rs  sets.rs
breaker-game/src/prelude/: components.rs  constants.rs  death_pipeline.rs  messages.rs  mod.rs  resources.rs  states.rs  test_utils.rs
breaker-game/src/run/: components.rs  definition.rs  difficulty.rs  messages.rs  mod.rs  plugin.rs  resources.rs
breaker-game/src/screen/: mod.rs  plugin.rs
breaker-game/src/shared/: asset_ron_parsing.rs  birthing.rs  collision_layers.rs  color.rs  components.rs  draw_layer.rs  game_state.rs  math.rs  mod.rs  playfield.rs  playing_state.rs  resources.rs  rng.rs  size.rs  test_utils.rs  validation.rs
breaker-game/src/state/: cleanup.rs  mod.rs  plugin.rs  routing.rs
breaker-game/src/ui/: components.rs  messages.rs  mod.rs  plugin.rs  resources.rs
breaker-game/src/wall/: components.rs  definition.rs  filters.rs  mod.rs  plugin.rs  registry.rs
breaker-game/src/walls/: components.rs  definition.rs  messages.rs  mod.rs  plugin.rs  test_utils.rs
breaker-scenario-runner/: Cargo.toml
breaker-scenario-runner/scenarios/: aegis_bolt_stress.scenario.ron  aegis_chaos.scenario.ron  chrono_scatter.scenario.ron  chrono_scripted.scenario.ron  chrono_timer_stress.scenario.ron  prism_stress.scenario.ron
breaker-scenario-runner/scenarios/chaos/: bolt_radius_clamping_chaos.scenario.ron  breaker_cell_impact_chaos.scenario.ron  breaker_impact_trigger_chaos.scenario.ron  breaker_wall_impact_chaos.scenario.ron  cell_death_speed_burst.scenario.ron  entity_scale_collision_chaos.scenario.ron  node_end_speed_purge.scenario.ron  node_scale_entity_chaos.scenario.ron  whiplash_whiff_chaos.scenario.ron
breaker-scenario-runner/scenarios/mechanic/: aegis_dash_wall.scenario.ron  aegis_lives_exhaustion.scenario.ron  aegis_pause_stress.scenario.ron  (+40 more)
breaker-scenario-runner/src/: coverage.rs  input.rs  invariants.rs  lib.rs  lifecycle.rs  log_capture.rs  main.rs  runner.rs  types.rs  verdict.rs
rantzsoft_defaults/: Cargo.toml
rantzsoft_defaults/src/: handle.rs  lib.rs  loader.rs  plugin.rs  prelude.rs  registry.rs  seedable.rs  systems.rs
(+4649 files in other folders)
