[workspace]
members = ["breaker-game", "breaker-derive"]
resolver = "3"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
# Correctness & suspicious code
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Style & complexity
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides — suppress noisy lints that don't add value
needless_pass_by_value = "allow"          # Bevy systems take ownership by convention
module_name_repetitions = "allow"         # BreakerState in breaker/ is fine

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
