[workspace]
members = ["breaker-game", "rantzsoft_spatial2d", "rantzsoft_defaults", "rantzsoft_defaults_derive", "breaker-scenario-runner"]
resolver = "3"

[workspace.lints.rust]
missing_docs       = "deny"
unsafe_code        = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use    = "deny"
let_underscore_drop    = "warn"
unreachable_pub    = "warn"
trivial_casts      = "warn"
trivial_numeric_casts  = "warn"

[workspace.lints.clippy]
# Core groups
all         = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "warn", priority = -1 }

# Restriction lints — explicit opt-in
dbg_macro                       = "deny"
allow_attributes_without_reason = "deny"
undocumented_unsafe_blocks      = "deny"
unwrap_used                     = "warn"
expect_used                     = "warn"
panic                           = "warn"
todo                            = "warn"
unimplemented                   = "warn"

# Pedantic overrides — intentional project conventions
needless_pass_by_value  = "allow" # Bevy systems take ownership by convention
module_name_repetitions = "allow" # BreakerState in breaker/ is intentional domain naming
wildcard_imports        = "allow" # Project convention: globs for 4+ items from same path

# Nursery overrides — contradicts `unreachable_pub` for pub(crate) in private modules
redundant_pub_crate     = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
