[workspace]
members = ["breaker-game", "rantzsoft_spatial2d", "rantzsoft_physics2d", "rantzsoft_defaults", "rantzsoft_defaults_derive", "rantzsoft_stateflow", "breaker-scenario-runner"]
resolver = "3"

[workspace.lints.rust]
missing_docs           = "deny"
unsafe_code            = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use        = "deny"
let_underscore_drop    = "deny"
unreachable_pub        = "deny"
trivial_casts          = "deny"
trivial_numeric_casts  = "deny"

[workspace.lints.clippy]
# Core groups
all         = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
pedantic    = { level = "deny", priority = -1 }

# Nursery — opt-in to specific useful lints (no blanket group)
# cognitive_complexity omitted — fires on assertion-heavy tests that shouldn't be split
collection_is_never_read      = "deny"
debug_assert_with_mut_call    = "deny"
derive_partial_eq_without_eq  = "deny"
empty_line_after_doc_comments = "deny"
empty_line_after_outer_attr   = "deny"
fallible_impl_from            = "deny"
imprecise_flops               = "deny"
iter_on_empty_collections     = "deny"
iter_on_single_items          = "deny"
iter_with_drain               = "deny"
large_stack_frames            = "deny"
missing_const_for_fn          = "deny"
needless_collect              = "deny"
needless_pass_by_ref_mut      = "deny"
nonstandard_macro_braces      = "deny"
path_buf_push_overwrite       = "deny"
read_zero_byte_vec            = "deny"
redundant_clone               = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening   = "deny"
string_lit_as_bytes           = "deny"
suboptimal_flops              = "deny"
suspicious_operation_groupings = "deny"
trailing_empty_array          = "deny"
trait_duplication_in_bounds   = "deny"
transmute_undefined_repr      = "deny"
trivial_regex                 = "deny"
tuple_array_conversions       = "deny"
type_repetition_in_bounds     = "deny"
uninhabited_references        = "deny"
unnecessary_struct_initialization = "deny"
unused_peekable               = "deny"
unused_rounding               = "deny"
use_self                      = "deny"

# Restriction lints — explicit opt-in
dbg_macro                       = "deny"
allow_attributes_without_reason = "deny"
undocumented_unsafe_blocks      = "deny"
unwrap_used                     = "deny"
expect_used                     = "deny"
panic                           = "deny"
todo                            = "warn"
unimplemented                   = "warn"

# Pedantic overrides — intentional project conventions
needless_pass_by_value  = "allow" # Bevy systems take ownership by convention
module_name_repetitions = "allow" # DashState in breaker/ is intentional domain naming
wildcard_imports        = "allow" # Project convention: globs for 4+ items from same path
cast_precision_loss       = "allow" # A lot of small f32 to u32 conversions
cast_sign_loss            = "allow" # Piercing charges, HP — small non-negative f32→u32
cast_possible_truncation  = "allow" # Piercing charges, HP — small non-negative f32→u32
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
