[package]
name = "breaker"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = ["dep:bevy_egui", "bevy/file_watcher"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "serialize"] }
bevy_egui = { version = "0.39", optional = true }
breaker_derive = { path = "../breaker-derive" }
serde = { version = "1", features = ["derive"] }
ron = "0.11"
bevy_common_assets = { version = "0.15", features = ["ron"] }
bevy_asset_loader = { version = "0.25", features = ["progress_tracking"] }
iyes_progress = "0.16"
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
