[package]
name = "breaker"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["dep:bevy_egui", "bevy/file_watcher", "rantzsoft_defaults/hot-reload"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "serialize"] }
bevy_egui = { version = "0.39", optional = true }
rantzsoft_defaults = { path = "../rantzsoft_defaults" }
rantzsoft_physics2d = { path = "../rantzsoft_physics2d" }
rantzsoft_stateflow = { path = "../rantzsoft_stateflow" }
rantzsoft_spatial2d = { path = "../rantzsoft_spatial2d" }
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
iyes_progress = "0.16"
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]

[lints]
workspace = true
