[package]
name = "breaker_scenario_runner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "breaker_scenario_runner"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }
breaker = { path = "../breaker-game" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ron = "0.11"
serde = { version = "1", features = ["derive"] }
rand = "0.9"

[lints]
workspace = true
