[package]
name = "breaker_scenario_runner"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "breaker_scenario_runner"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }
breaker = { path = "../breaker-game", default-features = false }
rantzsoft_lifecycle = { path = "../rantzsoft_lifecycle" }
rantzsoft_spatial2d = { path = "../rantzsoft_spatial2d" }
rantzsoft_physics2d = { path = "../rantzsoft_physics2d" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ron = "0.12"
serde = { version = "1", features = ["derive"] }
rand = "0.9"

[lints]
workspace = true
