[package]
name = "rantzsoft_defaults"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rantzsoft_defaults_derive = { path = "../rantzsoft_defaults_derive" }
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }

[dev-dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
